# mutantrolls-contracts

./: Anchor.toml  Cargo.toml  LICENSE  README.md  diceroll-cocenpt
diceroll-concept/: diceroll
mutr_clr_concept/: README.md  mutr_clr.rs
programs/mutr_clr/: Cargo.toml
programs/mutr_clr/src/: lib.rs
